Changed margin on small screen (fixed)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -172,7 +172,7 @@ blockquote {
 
 .home {
   margin-top:30vh;
-  @media (max-width:576) {
+  @media (max-width:576px) {
     margin-top:0; // Set to 0 to remove the margin when the screen is less than 576px
   }
   // display: flex;
